[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Nonagram Tiles.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PathfindingController.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Cursor.gd" type="Script" id=4]
[ext_resource path="res://Scripts/BoardGenerator.gd" type="Script" id=5]
[ext_resource path="res://UI/Main_Theme.tres" type="Theme" id=6]
[ext_resource path="res://Camera.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Tileset.tres" type="TileSet" id=9]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/AStar2DVisualizer.gd" type="Script" id=11]
[ext_resource path="res://Scripts/BoardController.gd" type="Script" id=12]
[ext_resource path="res://Audio/dungeon002.ogg" type="AudioStream" id=13]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="BoardController" type="Node" parent="."]
script = ExtResource( 12 )
nonogram_tile_map = NodePath("../Tilemaps/NonogramTileMap")
solution_tile_map = NodePath("../Tilemaps/SolutionTileMap")
world_tile_map = NodePath("../Tilemaps/WorldTileMap")
entities_node = NodePath("../Entities")
enemies_node = NodePath("../Enemies")

[node name="BoardGenerator" type="Node2D" parent="BoardController"]
script = ExtResource( 5 )
nonogram_tilemap = NodePath("../../Tilemaps/NonogramTileMap")
solution_tilemap = NodePath("../../Tilemaps/SolutionTileMap")
dungeon_tilemap = NodePath("../../Tilemaps/WorldTileMap")
pathfinder = NodePath("../../PathfindingController")
enemies_node = NodePath("../../Enemies")
entities_node = NodePath("../../Entities")
player = NodePath("../../Player")

[node name="RayCast2D" type="RayCast2D" parent="BoardController/BoardGenerator"]

[node name="PathfindingController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, -1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true
smoothing_speed = 8.0
script = ExtResource( 7 )

[node name="AStarVisualizer" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Tilemaps" type="Node2D" parent="."]

[node name="EffectTileMap" type="TileMap" parent="Tilemaps"]
modulate = Color( 1, 1, 1, 0.67451 )
z_index = 3
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="NonogramTileMap" type="TileMap" parent="Tilemaps"]
visible = false
z_index = 2
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="WorldTileMap" type="TileMap" parent="Tilemaps"]
z_index = 1
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="SolutionTileMap" type="TileMap" parent="Tilemaps"]
visible = false
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Enemies" type="Node2D" parent="."]

[node name="Entities" type="Node2D" parent="."]

[node name="Cursor" type="Node2D" parent="."]
position = Vector2( 8, 8 )
script = ExtResource( 4 )

[node name="Main" type="Sprite" parent="Cursor"]
modulate = Color( 1, 1, 1, 0.87451 )
z_index = 3
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="MultiLabel" type="Node2D" parent="Cursor"]
z_index = 4

[node name="MultiLabelText" type="Label" parent="Cursor/MultiLabel"]
visible = false
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 6 )
align = 1
valign = 1

[node name="MultiLabelBack" type="ColorRect" parent="Cursor/MultiLabel/MultiLabelText"]
visible = false
show_behind_parent = true
anchor_right = 1.026
anchor_bottom = 1.0
margin_right = -0.338001
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="MultiStart" type="Sprite" parent="Cursor"]
z_index = 3

[node name="MultiEnd" type="Sprite" parent="Cursor"]
z_index = 3

[node name="CursorScale" type="Tween" parent="Cursor"]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true
bus = "Ambience"

[connection signal="player_death" from="Player" to="." method="_on_player_death"]
[connection signal="player_turn_over" from="Player" to="." method="_on_player_turn_over"]
[connection signal="stairs_found" from="Player" to="." method="_on_stairs_found"]
